@@ -1,8 +1,9 @@
-2016-02-25  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-02-28  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         =========================
 
+        Make GFilename::is_fits thread safe (#1717).
         Revise GTime operators (#1714)
         Add GSkyMap::publish() method to publish map on VO Hub (#1710)
         Add GVOClient::publish() method to publish a FITS HDU (#1710)
